# wasserstein-market-regime-clustering

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 01_exploration.ipynb  02_wasserstein_regime_clustering.ipynb  03_backtest_and_analysis.ipynb
reports/: summary.md
scripts/: run_multi_asset_experiment.py  run_spy_experiment.py
src/regime_ot/: __init__.py  backtest.py  baselines.py  cli.py  data.py  evaluation.py  plotting.py  returns.py  wasserstein.py  windows.py  wkmeans.py
tests/: test_backtest.py  test_evaluation.py  test_wasserstein.py  test_windows.py  test_wkmeans.py
